feat. Aggiunta la sezione dei progetti

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
         <h1>Benvenuto nel Portfolio di Angelo</h1>
     </header>
     <main>
-        <!-- La sezione progetti verrà aggiunta in seguito -->
+        <!-- ... dentro il tag <main> ... -->
+<main>
+    <section>
+        <h2>I Miei Progetti</h2>
+        <ul>
+            <li>Progetto 1: Un'app fantastica</li>
+            <li>Progetto 2: Un sito rivoluzionario</li>
+        </ul>
+    </section>
+</main>
     </main>
 </body>
 </html>
